# codestyle

./: .buildinfo  .gitignore  .lefthook.yml  .lycheecache  Makefile  README.md  classes.html  cookiecutter.html  dependencies_management.md  encapsulation.md  genindex.html  git_basics.md  index.html  libraries.html  link_generator.py  linting.html  motivation.html  never_hardcode.md  objects.inv  open_closed.md  pathlib.md  poetry.html  preferred libraries.html  pyproject.toml  search.html  searchindex.js  tldr.html  typehinting.html  usage.html
.lefthook/pre-commit/: find_orphans.sh  link_generator.py
_sources/: classes.rst.txt  cookiecutter.rst.txt  index.rst.txt  libraries.rst.txt  linting.rst.txt  motivation.rst.txt  poetry.rst.txt  tldr.rst.txt  typehinting.rst.txt
docs/: abstract_code.md  add_a_readme.md  cookiecutter.md  dependencies_management.md  encapsulation.md  git_basics.md  linting.md  loguru.md  make_a_module.md  never_hardcode.md  open_closed.md  path.md  pathlib.md  pydantic.md  testing.md  trunk_based_git.md  typehinting.md  use_classes_and_inheritance.md  version_management.md
