[project]
name = "codestyle"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Raoul Grouls", email = "Raoul.Grouls@han.nl" }
]
dependencies = [
    "lefthook>=1.8.1",
    "mdformat>=0.7.18",
    "markdown-toc>=1.2.6",
]
readme = "README.md"
requires-python = ">= 3.9"


